[gd_scene load_steps=13 format=3 uid="uid://ds4tkwaupm3he"]

[ext_resource type="Script" path="res://Scripts/Battle_Sim/battle_sim.gd" id="1_mc5mi"]
[ext_resource type="Script" path="res://Scripts/Battle_Sim/decks.gd" id="2_ti0s5"]
[ext_resource type="Script" path="res://Scripts/Battle_Sim/PlayerSkills.gd" id="2_uev3k"]
[ext_resource type="Script" path="res://Scripts/Battle_Sim/Enemy.gd" id="3_7ul7h"]
[ext_resource type="Script" path="res://Scripts/UI/Battle_Sim/UI.gd" id="5_ppjxe"]
[ext_resource type="PackedScene" uid="uid://c0dq60hmfb20e" path="res://Scenes/UI/Player/player.tscn" id="5_th71o"]
[ext_resource type="PackedScene" uid="uid://dac2v2br3grnx" path="res://Scenes/Characters/berserker.tscn" id="6_otqk3"]
[ext_resource type="PackedScene" uid="uid://bp847kvytvbu6" path="res://Scenes/Battle/battle_rewards.tscn" id="9_326y0"]
[ext_resource type="PackedScene" uid="uid://dluppe6lcdir0" path="res://Scenes/UI/Player/consumable_manger.tscn" id="10_1g37w"]
[ext_resource type="AudioStream" uid="uid://cxtsqm0vys3fa" path="res://Resources/Sound/Background/BattleBackground.wav" id="10_pbym1"]
[ext_resource type="Texture2D" uid="uid://c465pilgwamiu" path="res://Resources/Art/Backgrounds/pixel-art-video-games-Moon_bg1.png" id="11_rvgss"]
[ext_resource type="PackedScene" uid="uid://dwfyxhnik18ry" path="res://Scenes/UI/Player/player_ui.tscn" id="12_42871"]

[node name="battle_sim" type="Node2D"]
script = ExtResource("1_mc5mi")

[node name="PlayerSkills" type="Node2D" parent="."]
script = ExtResource("2_uev3k")

[node name="player_deck" type="Node2D" parent="."]
script = ExtResource("2_ti0s5")

[node name="Enemy" type="Node2D" parent="."]
script = ExtResource("3_7ul7h")

[node name="Player" parent="." instance=ExtResource("5_th71o")]

[node name="Berserker" parent="Player" instance=ExtResource("6_otqk3")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_ppjxe")

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 1529.0
offset_top = 426.0
offset_right = 1917.0
offset_bottom = 670.0
color = Color(0.254902, 0.254902, 0.254902, 0.752941)

[node name="RichTextLabel" type="RichTextLabel" parent="UI/ColorRect"]
layout_mode = 0
offset_left = 13.0
offset_top = -1.0
offset_right = 374.0
offset_bottom = 243.0
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="PlayerDamageNumber" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1792.0
offset_top = 193.0
offset_right = 1832.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 33

[node name="EnemyDamageNumber" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1774.0
offset_top = 880.0
offset_right = 1814.0
offset_bottom = 903.0
theme_override_font_sizes/font_size = 33

[node name="EnemyBleedTaken" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.652057, 0.0009675, 0.000530305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)

[node name="BattleRewards" parent="." instance=ExtResource("9_326y0")]
visible = false

[node name="Button" type="Button" parent="."]
offset_left = 891.0
offset_top = 544.0
offset_right = 1008.0
offset_bottom = 599.0
scale = Vector2(1.16536, 1.1912)
text = "Start"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(48.0007, 27.003)
color = Color(0.233925, 0.233925, 0.233925, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
offset_left = 1611.0
offset_top = 835.0
offset_right = 1870.0
offset_bottom = 866.0

[node name="RearrangeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rearrange"

[node name="ContinueButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"

[node name="InventoryButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 1920.0
offset_bottom = 1079.0
mouse_filter = 2
texture = ExtResource("11_rvgss")

[node name="ConsumableManger" parent="." instance=ExtResource("10_1g37w")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pbym1")
autoplay = true

[node name="PlayerUI" parent="." instance=ExtResource("12_42871")]

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="HBoxContainer/RearrangeButton" to="." method="_on_rearrange_button_button_down"]
[connection signal="button_down" from="HBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="HBoxContainer/InventoryButton" to="." method="_on_inventory_button_button_down"]
